mermaidを外部ファイルとしてincludeに変更

--- a/10_base/template/notes/note.html
+++ b/10_base/template/notes/note.html
@@ -15,7 +15,7 @@
     </script>
     <style>{%- include "mermaid.css" -%}</style>
     <style>{%- include "markdown.css" -%}</style>
-    <script type="text/javascript">{%- include "mermaid.min.js" -%}</script>
+    <script type="text/javascript" src="mermaid.min.js"></script>
     <script type="text/javascript">
         function loadFinished(){
             var elem = document.getElementById("json-data");
