notesのmdをhtmlに変換対応

--- a/10_base/template/notes/note.html
+++ b/10_base/template/notes/note.html
@@ -1,8 +1,15 @@
 {#- start of defines -#}
-{%- set data_env      = data_4d22a990e03e4ff0b66061daa1674a0d -%}
-{%- set data_cfg      = data_0ad5e680ae104f759b7452632d6f6380 -%}
-{%- set data_contents = data_5748645e84d54977b42c83f3b9527a3b -%}
-{%- set data_src_ex   = data_e92b12a896bb4e8dbdef1c83ab77e025 -%}
+
+{%- set env_path  = data_e39fc4e85e8040d29e215197b26d300a -%}
+{%- set user_path = data_fb6f549ef7e44a5693e319ea6bea81e9 -%}
+{%- set env_vars  = data_4d22a990e03e4ff0b66061daa1674a0d -%}
+{%- set tmpl_inf  = data_095064f18e894dcfaa3f8d12b1d0b9ca -%}
+{%- set data_root = data_d74c99efdbb745129d4e98d2194bc941 -%}
+
+{%- set data_cfg      = data_root.data_0ad5e680ae104f759b7452632d6f6380 -%}
+{%- set data_contents = data_root.data_5748645e84d54977b42c83f3b9527a3b -%}
+{%- set data_src_ex   = data_root.data_e92b12a896bb4e8dbdef1c83ab77e025 -%}
+
 {#- end of defines -#}
 <!DOCTYPE html>
 <meta charset="utf-8">
