--- a/10_base/template/notes/markdown.css
+++ b/10_base/template/notes/markdown.css
@@ -6,6 +6,9 @@
  ---------------------------------------- */
 
  body {
+    top:0;
+    left:0;
+    width:100%;
     color: var(--label_text_color);
     background: #ffe8eaff;
   }
@@ -21,7 +24,7 @@
     position: relative;
     padding-left: 18px;
     font-size: 22pt;
-    width:calc(3000px - 10vw);
+    width:100%;
   }
   
   h2 {
@@ -174,18 +177,33 @@
   }
 
     /* ----------------------------------------
-      TOC
+      class
    ---------------------------------------- */
   
   .toc {
     position: fixed;
-    top: 0;
-    left: 80%;
-    width: 20%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.90);
+    top: 7%;
+    right: 1%;
+    width: 18%;
+    height: 88%;
+    background-color: rgba(0, 0, 0, 0.1);
     color: white;
-    border: 1px solid white;
+    border: 3px solid black;
     border-radius: 7px 7px 7px 7px;
     overflow:scroll;
-}
+  }
+
+  /* ----------------------------------------
+    id
+  ---------------------------------------- */
+  #toc_icon {
+    position: fixed;
+    top: 1%;
+    right: 1%;
+    width: 11pt;
+    height: 11pt;
+    border: 1pt solid black;
+    border-radius: 5px 5px 5px 5px;
+    background-color: rgba(255,255,255,0.1);
+    padding: 1pt 1pt 1pt 1pt;
+  }
