--- a/10_base/template/notes/markdown.css
+++ b/10_base/template/notes/markdown.css
@@ -1,209 +1,313 @@
 :root{
-  --label_text_color:black;
+  --base_text_color: black;
+  --base_bg_color  : #ffe8eaff;
+  --base_bd_color  : #B61C2C;
+  --base_border    : 1px solid var(--base_bd_color);
+  --rev_text_color : white;
+  --dark_lv_1      : rgba(0, 0, 0, 0.1);
+  --dark_lv_2      : rgba(0, 0, 0, 0.2);
+  --dark_lv_3      : rgba(0, 0, 0, 0.3);
+  --dark_lv_4      : rgba(0, 0, 0, 0.4);
+  --dark_lv_5      : rgba(0, 0, 0, 0.5);
+  --light_lv_1     : rgba(255, 255, 255, 0.1);
+  --light_lv_2     : rgba(255, 255, 255, 0.2);
+  --light_lv_3     : rgba(255, 255, 255, 0.3);
+  --light_lv_4     : rgba(255, 255, 255, 0.4);
+  --light_lv_5     : rgba(255, 255, 255, 0.5);
 }
 /* ----------------------------------------
-    body
- ---------------------------------------- */
+  body
+---------------------------------------- */
 
- body {
-    top:0;
-    left:0;
-    width:100%;
-    color: var(--label_text_color);
-    background: #ffe8eaff;
-  }
-  
-  /* ----------------------------------------
-      heading
-   ---------------------------------------- */
-  h1 {
-    color: var(--label_text_color);
-    background: rgba(203, 162, 164, .5);
-    padding-top: 3em;
-    line-height: 2em;
-    position: relative;
-    padding-left: 18px;
-    font-size: 22pt;
-    width:100%;
-  }
-  
-  h2 {
-    position: relative;
-    padding: 0 .5em .5em 2em;
-    border-bottom: 1px solid #B61C2C;
-    font-size: 22pt;
-  }
-  
-  h2::before,
-  h2::after {
-    position: absolute;
-    content: '';
-    border-radius: 100%
-  }
-  
-  h2::before {
-    top: .2em;
-    left: .2em;
-    z-index: 2;
-    width: 18px;
-    height: 18px;
-    background: rgba(203, 162, 164, .5);
-  }
-  
-  h2::after {
-    top: .7em;
-    left: .7em;
-    width: 13px;
-    height: 13px;
-    background: rgba(182, 28, 44, .5);
-  }
-  
-  h3,
-  h4,
-  h5,
-  h6 {
-    text-decoration: underline;
-    font-size: 22pt;
-  }
-  
-  
-  /* ----------------------------------------
-      anchor
-   ---------------------------------------- */
-  a {
-    color: rgba(182, 28, 44, .5);
-  }
-  
-  a :visited {
-    color: rgba(182, 28, 44, .5);
-  }
-  
-  /* ----------------------------------------
-      paragraph
-   ---------------------------------------- */
-  p {
-    background: rgba(255, 222, 224, .5);
-    line-height: 1.5em;
-    background-size: 100% 1.5em;
-    margin-top: 1em;
-    margin-bottom: 0.2em;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-    background-image: linear-gradient(180deg, rgba(182, 28, 44, .5) 1px, transparent 1px);
-    padding-bottom: 1px;
-  }
-  
-  /* ----------------------------------------
-      horizontal rule
-   ---------------------------------------- */
-  
-  hr {
-    margin-top: 3em;
-    margin-bottom: 3em;
-    border: 0;
-    height: 4px;
-    background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0));
-    background-image: -moz-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0));
-    background-image: -ms-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0));
-    background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0));
-  }
-  
-  /* ----------------------------------------
-      table
-   ---------------------------------------- */
-  
-  table {
-    border-collapse: separate;
-    border-spacing: 5px;
-    width: 100%;
-  }
-  
-  table th {
-    border-radius: 5px;
-    background-color: rgba(182, 28, 44, .5);
-    color: white;
-    border: solid 1px #927141;
-    padding-left: 1em;
-  }
-  
-  table td {
-    border-radius: 5px;
-    background-color: rgba(203, 162, 164, .5);
-    border: solid 1px #af9d85;
-    padding-left: 1em;
-  }
-  
-  /* ----------------------------------------
-      image
-   ---------------------------------------- */
-  
-  img {
-    max-width: 100%;
-    max-height: 300px;
-  }
-  
-  /* ----------------------------------------
-      code / pre
-   ---------------------------------------- */
-  
-  pre,
-  code {
-    width: 100%;
-    border-radius: 20px;
-  }
-  
-  code div {
-    width: 100%;
-  
-    background: initial;
-    border: initial;
-    color: initial;
-  
-    background-color: rgba(0, 0, 0, 0.50);
-    color: white;
-    border-radius: 10px;
-    border: 1px dashed rgba(0, 0, 0, 0.50);
-  }
-  
-  p code {
-    width: auto;
-    color: white;
-    font-size: 1.2em;
-    padding: 0.3em;
-    background-color: rgba(182, 28, 44, .5);
-    border-radius: 20px;
-    border: 1px dashed rgba(0, 0, 0, 0.50);
-  }
+body {
 
-    /* ----------------------------------------
-      class
-   ---------------------------------------- */
-  
-  .toc {
-    position: fixed;
-    top: 7%;
-    right: 1%;
-    width: 18%;
-    height: 88%;
-    background-color: rgba(0, 0, 0, 0.1);
-    color: white;
-    border: 3px solid black;
-    border-radius: 7px 7px 7px 7px;
-    overflow:scroll;
-  }
+  /* pos / size */
+  top:0px;
+  left:0px;
+  width:99%;
+  margin: 0;
+  padding: 0 1% 0 1%;
 
-  /* ----------------------------------------
-    id
+  /* color */
+  color: var(--base_text_color);
+  background: var(--base_bg_color);
+
+}
+
+/* ----------------------------------------
+    heading
   ---------------------------------------- */
-  #toc_icon {
-    position: fixed;
-    top: 1%;
-    right: 1%;
-    width: 11pt;
-    height: 11pt;
-    border: 1pt solid black;
-    border-radius: 5px 5px 5px 5px;
-    background-color: rgba(255,255,255,0.1);
-    padding: 1pt 1pt 1pt 1pt;
-  }
+h1 {
+  /* pos / size */
+  padding      : 3em 0 0 1em;
+  line-height  : 2em;
+  position     : relative;
+  width        : calc( 100% - 1em );
+  margin       : 0;
+
+  font-size    : 22pt;
+
+  /* color */
+  color        : var(--base_text_color);
+  background   : var(--dark_lv_1); 
+}
+
+h2 {
+
+  /* pos / size */
+  position  : relative;
+  padding   : 0 .5em .5em 2em;
+  font-size : 22pt;
+  margin    : 0;
+
+  /* color */
+  border-bottom: var(--base_border);
+}
+
+h2::before,
+h2::after {
+
+  /* pos / size */
+  position: absolute;
+  content: '';
+  border-radius: 100%
+
+  /* color */
+}
+
+h2::before {
+
+  /* pos / size */
+  top: .2em;
+  left: .2em;
+  z-index: 2;
+  width: 18px;
+  height: 18px;
+
+  /* color */
+  background: var(--dark_lv_2);
+}
+
+h2::after {
+
+  /* pos / size */
+  top: .7em;
+  left: .7em;
+  width: 13px;
+  height: 13px;
+
+  /* color */
+  background: var(--base_bd_color);
+}
+
+h3,
+h4,
+h5,
+h6 {
+
+  /* pos / size */
+  font-size: 22pt;
+
+  /* color */
+  text-decoration: underline;
+}
+
+
+/* ----------------------------------------
+    anchor
+  ---------------------------------------- */
+a {
+  /* pos / size */
+
+  /* color */
+  color: var(--base_bd_color);
+}
+
+a :visited {
+  /* pos / size */
+
+  /* color */
+  color: var(--base_bd_color);
+}
+
+/* ----------------------------------------
+    paragraph
+  ---------------------------------------- */
+p {
+  /* pos / size */
+  line-height: 1.5em;
+  background-size: 100% 1.5em;
+  margin-top: 1em;
+  margin-bottom: 0.2em;
+  margin-left: auto;
+  margin-right: auto;
+  width: 99%;
+  padding-bottom: 1px;
+
+  /* color */
+  background: var(--light_lv_1);
+}
+
+/* ----------------------------------------
+    horizontal rule
+  ---------------------------------------- */
+
+hr {
+  /* pos / size */
+  margin-top: 3em;
+  margin-bottom: 3em;
+  border: 0;
+  height: 4px;
+
+  /* color */
+  background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0));
+  background-image: -moz-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0));
+  background-image: -ms-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0));
+  background-image: -o-linear-gradient(left, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0));
+}
+
+/* ----------------------------------------
+    table
+  ---------------------------------------- */
+
+table {
+  /* pos / size */
+  border-collapse: separate;
+  border-spacing: 5px;
+  width: 99%;
+
+  /* color */
+}
+
+table th {
+  /* pos / size */
+  border-radius: 5px;
+  padding-left: 1em;
+
+  /* color */
+  background-color: var(--dark_lv_5);
+  color: var(--base_text_color);
+  border: var(--base_border);
+}
+
+table td {
+  /* pos / size */
+  border-radius: 5px;
+  padding-left: 1em;
+
+  /* color */
+  background-color: var(--dark_lv_3);
+  border: var(--base_border);
+}
+
+/* ----------------------------------------
+    image
+  ---------------------------------------- */
+
+img {
+  /* pos / size */
+  max-width: 99%;
+  max-height: 300px;
+
+  /* color */
+}
+
+/* ----------------------------------------
+    code / pre
+  ---------------------------------------- */
+
+pre,
+code {
+  /* pos / size */
+  width: 99%;
+  border-radius: 20px;
+
+  /* color */
+}
+
+code div {
+  /* pos / size */
+  width: 99%;
+
+  background: initial;
+  border: initial;
+
+  /* color */
+  color: initial;
+  background-color: var(--dark_lv_5);
+  color: var(--base_text_color);
+  border-radius: 10px;
+  border: 1px dashed var(--dark_lv_5);
+}
+
+p code {
+
+  /* pos / size */
+  width: auto;
+  font-size: 1.2em;
+  padding: 0.3em;
+
+  /* color */
+  color: var(--base_text_color);
+}
+
+/* ----------------------------------------
+  class
+---------------------------------------- */
+
+.toc {
+
+  /* pos / size */
+  position: fixed;
+  top: 7%;
+  right: 1%;
+  width: 18%;
+  height: 88%;
+
+  /* color */
+  background-color: var(--dark_lv_1);
+  color: var(--base_bg_color);
+  border: 3px solid var(--base_bd_color);
+  border-radius: 7px 7px 7px 7px;
+  overflow:scroll;
+  visibility:hidden;
+}
+
+.mermaid {
+
+  background-color: var(--light_lv_5);
+
+  border: 3px solid var(--base_bd_color);
+  border-radius: 7px 7px 7px 7px;
+  overflow:scroll;
+
+}
+
+.codehilite {
+  color: var(--rev_text_color);
+  background-color: var(--dark_lv_5);
+
+  border: 3px solid var(--base_bd_color);
+  border-radius: 7px 7px 7px 7px;
+  overflow:scroll;
+
+}
+
+/* ----------------------------------------
+  id
+---------------------------------------- */
+#toc_icon {
+
+  /* pos / size */
+  position: fixed;
+  top: 1%;
+  right: 1%;
+  width: 11pt;
+  height: 11pt;
+
+  /* color */
+  border: 1pt solid var(--base_text_color);
+  border-radius: 5px 5px 5px 5px;
+  background-color: rgba(255,255,255,0.1);
+  padding: 1pt 1pt 1pt 1pt;
+}
